design profile without server

--- a/Botan 1.0/Base.lproj/Main.storyboard
+++ b/Botan 1.0/Base.lproj/Main.storyboard
@@ -43,6 +43,9 @@
                                         <rect key="frame" x="91" y="15.5" width="16" height="19"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <state key="normal" image="Deadline.tiff"/>
+                                        <connections>
+                                            <segue destination="ggf-8U-7B8" kind="presentation" id="SRu-B6-sai"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" fixedFrame="YES" placeholderIntrinsicWidth="40" placeholderIntrinsicHeight="49" translatesAutoresizingMaskIntoConstraints="NO" id="0VZ-th-iIy">
                                         <rect key="frame" x="108" y="0.0" width="40" height="49"/>
@@ -76,6 +79,9 @@
                                         <rect key="frame" x="273" y="15" width="19" height="19"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <state key="normal" image="Profile.tiff"/>
+                                        <connections>
+                                            <segue destination="VYy-Ua-iiG" kind="presentation" id="H3K-sN-ghr"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" fixedFrame="YES" placeholderIntrinsicWidth="28" placeholderIntrinsicHeight="49" translatesAutoresizingMaskIntoConstraints="NO" id="z5L-34-ejv">
                                         <rect key="frame" x="292" y="0.0" width="28" height="49"/>
@@ -512,10 +518,10 @@
             </objects>
             <point key="canvasLocation" x="9540" y="114.08450704225352"/>
         </scene>
-        <!--View Controller-->
+        <!--Profile View Controller-->
         <scene sceneID="gbd-oX-ZBc">
             <objects>
-                <viewController id="VYy-Ua-iiG" sceneMemberID="viewController">
+                <viewController id="VYy-Ua-iiG" customClass="ProfileViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="mMG-dg-M5c"/>
                         <viewControllerLayoutGuide type="bottom" id="XRM-7L-aUs"/>
@@ -587,27 +593,42 @@
                                         <state key="normal" title="2">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="changePage:" destination="VYy-Ua-iiG" eventType="touchUpInside" id="yBf-c5-Y7P"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="79W-mv-IBm">
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="79W-mv-IBm">
                                         <rect key="frame" x="80" y="0.0" width="80" height="56"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="0">
-                                            <color key="titleColor" red="0.58039215686274503" green="0.58039215686274503" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="changePage:" destination="VYy-Ua-iiG" eventType="touchUpInside" id="OV5-kU-7U3"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fv9-gW-gAh">
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fv9-gW-gAh">
                                         <rect key="frame" x="160" y="0.0" width="80" height="56"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="0">
-                                            <color key="titleColor" red="0.58039215686274503" green="0.58039215686274503" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="changePage:" destination="VYy-Ua-iiG" eventType="touchUpInside" id="iT2-0o-BBX"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0IL-U8-wbp">
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0IL-U8-wbp">
                                         <rect key="frame" x="240" y="-1" width="80" height="56"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="0">
-                                            <color key="titleColor" red="0.58039215686274503" green="0.58039215686274503" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="changePage:" destination="VYy-Ua-iiG" eventType="touchUpInside" id="fCh-bh-vHr"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="выполняю" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ubs-ne-ls4">
                                         <rect key="frame" x="2" y="37" width="76" height="14"/>
@@ -669,6 +690,9 @@
                                         <rect key="frame" x="28" y="15" width="21" height="19"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <state key="normal" title="Home" image="Home.tiff"/>
+                                        <connections>
+                                            <segue destination="JjN-TE-8ft" kind="presentation" id="mtt-9F-qv8"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" fixedFrame="YES" placeholderIntrinsicWidth="40" placeholderIntrinsicHeight="49" translatesAutoresizingMaskIntoConstraints="NO" id="7cH-CW-otE">
                                         <rect key="frame" x="49" y="0.0" width="40" height="49"/>
@@ -718,25 +742,31 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pbb-uA-OlU">
-                                <rect key="frame" x="0.0" y="280" width="320" height="239"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qZG-fd-8mE">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="239"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    </tableView>
-                                </subviews>
-                                <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="monets.tiff" translatesAutoresizingMaskIntoConstraints="NO" id="tx1-st-kef">
                                 <rect key="frame" x="293" y="177" width="12" height="15"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TAu-dz-iv7">
+                                <rect key="frame" x="0.0" y="265" width="320" height="255"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="VYy-Ua-iiG" id="Y5d-MK-2jF"/>
+                                </connections>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="archiveBtn" destination="Fv9-gW-gAh" id="aIH-iX-PAh"/>
+                        <outlet property="balanceBtn" destination="AKo-Jg-nya" id="C0b-HU-HDq"/>
+                        <outlet property="balanceLbl" destination="rgf-r9-9OH" id="B7G-J2-VSI"/>
+                        <outlet property="currentOrdersBtn" destination="79W-mv-IBm" id="8PH-cN-RaN"/>
+                        <outlet property="currentWorkBtn" destination="6WR-VG-71w" id="1fH-PD-f2q"/>
+                        <outlet property="nickLbl" destination="gdk-tp-4nd" id="EYM-aD-GvT"/>
+                        <outlet property="pageLineView" destination="wwF-Uj-9OJ" id="7P0-tX-2Zj"/>
+                        <outlet property="reviewsBtn" destination="0IL-U8-wbp" id="bWn-1e-4K8"/>
+                        <outlet property="scroller" destination="TAu-dz-iv7" id="XDy-Kc-N5v"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sab-UF-oZW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
